kubernetes/openebs-deployment.yaml
---
# Creating namespace for keycloak and stackgres to be installed in
apiVersion: v1
kind: Namespace
metadata:
  name: openebs
