kubernetes/alpine.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: alpine
  # Using hostpath volumes requires privileged pod security
  # This is required for the portainer container to access the host filesystem for storing data in /var/mnt/portainer
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
---
# Simple alpine container deployment used for debugging
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alpine-deployment
  namespace: alpine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alpine
  template:
    metadata:
      labels:
        app: alpine
    spec:
      nodeSelector:
        kubernetes.io/hostname: yumi
      containers:
        - name: alpine
          image: alpine:latest
          command: ["sleep", "3600"]
          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
      #     volumeMounts:
      #       - name: data
      #         mountPath: /data
      #       - name: mnt
      #         mountPath: /mnt
      # volumes:
      #   - name: data
      #     hostPath:
      #       path: /var/mnt/portainer
      #       type: Directory
      #   - name: mnt
      #     nfs:
      #       server: nfs.local.timo.be
      #       path: /mnt/FranzHopper/appdata/portainer
