kubernetes/iscsi-test.yaml
---
# Creating namespace for tailscale to be installed in
apiVersion: v1
kind: Namespace
metadata:
  name: iscsi
  # Tailscale needs network admin and some other permissions
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iscsi-test-deployment
  namespace: iscsi
  labels:
    app: iscsi-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iscsi-test
  template:
    metadata:
      labels:
        app: iscsi-test
    spec:
      containers:
      - name: app
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: iscsi-storage
          mountPath: /usr/share/nginx/html
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
      volumes:
      - name: iscsi-storage
        persistentVolumeClaim:
          claimName: iscsi-pvc
