kubernetes/example-traefik-external-service.yaml
---
# EXAMPLE: Deploy a traefik route to a service not running in Kubernetes (f.e. proxmox) using Kubernetes External Services (https://doc.traefik.io/traefik/routing/providers/kubernetes-crd/#kind-ingressroute:~:text=an%20http%20connection.-,Using%20Kubernetes%20ExternalName%20Service,-Traefik%20backends%20creation)
# First you define the "router" in traefik (aka IngressRoute) where you point to a Kubernetes external service
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: routerpve
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`routerpve.timo.be`)
      kind: Rule
      services:
        - name: routerpve-svc
      middlewares:
        - name: EXAMPLE
          namespace: EXAMPLE
  tls:
    secretName: wildcard-timo-be-production-tls
---
apiVersion: v1
kind: Service
metadata:
  name: routerpve-svc
  namespace: traefik
spec:
  externalName: routerpve.timo.local # Can also be an IP address
  type: ExternalName
  ports:
    - port: 8006
