kubernetes/keel-deployment.yaml
# Allowing traefik to route to portainer
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: keel
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`keel.kubernetes.timo.be`)
      kind: Rule
      services:
        - name: keel
          port: 9300
  tls:
    secretName: wildcard-timo-be-production-tls
