kubernetes/portainer-deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: portainer
---
# Allowing traefik to route to portainer
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: portainer
  namespace: portainer
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`portainer.kubernetes.timo.be`)
      kind: Rule
      services:
        - name: portainer
          port: 9443
