kubernetes/portainer.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: portainer
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: portainer-ingress
  namespace: portainer
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`portainer.kubernetes.timo.be`)
      kind: Rule
      services:
        - name: portainer
          port: 9443
          scheme: https
          serversTransport: portainer-serverstransport
