kubernetes/stackgres-deployment.yaml
---
# Creating namespace for keycloak and stackgres to be installed in
apiVersion: v1
kind: Namespace
metadata:
  name: stackgres
---
# Allowing traefik to route to stackgres ui
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: stackgres
  namespace: stackgres
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`stackgrestest.timo.be`)
      kind: Rule
      services:
        - name: stackgres-restapi
          port: 443
      middlewares:
        - name: secureheaders
          namespace: traefik
        - name: ratelimit
          namespace: traefik
  tls:
    secretName: wildcard-timo-be-production-tls
