kubernetes/traefik-deployment.yaml
---
# Creating namespace for traefik to be installed in
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
---
# Create middlewares for traefik, including headers, ratelimit and middlewares for routing certain apps correctly
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: secureheaders
  namespace: traefik
spec:
  headers:
    accessControlAllowMethods:
      - "GET"
      - "OPTIONS"
      - "PUT"
    accessControlMaxAge: 100
    hostsProxyHeaders:
      - "X-Forwarded-Host"
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 15552000
    referrerPolicy: "same-origin"
    permissionsPolicy: "camera 'none'; geolocation 'none'; microphone 'none'; payment 'none'; usb 'none'; vr 'none';" 
    customResponseHeaders:
      X-Robots-Tag: "none,noarchive,nosnippet,notranslate,noimageindex,"
      server: ""
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: ratelimit
  namespace: traefik
spec:
  rateLimit:
    average: 100
    burst: 200
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: accountsredirect
  namespace: traefik
spec:
  redirectRegex:
    regex: "(.)*"
    replacement: "https://auth.timo.be/realms/HomeServer/account/#/security/linked-accounts"
    permanent: false
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: statusredirect
  namespace: traefik
spec:
  redirectRegex:
    regex: "(.)*"
    replacement: "https://uptime.timo.be/status/default"
    permanent: false
---
# Changes in headers to make longhorn ui work
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: longhornheaders
  namespace: traefik
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
---
# Deploy traefik dashboard with the middlewares
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefiktest.timo.be`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: wildcard-timo-be-production-tls
---
# EXAMPLE: Deploy a traefik route to a service not running in Kubernetes (f.e. proxmox) using Kubernetes External Services (https://doc.traefik.io/traefik/routing/providers/kubernetes-crd/#kind-ingressroute:~:text=an%20http%20connection.-,Using%20Kubernetes%20ExternalName%20Service,-Traefik%20backends%20creation)
# First you define the "router" in traefik (aka IngressRoute) where you point to a Kubernetes external service
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: routerpve
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`routerpve.timo.be`)
      kind: Rule
      services:
        - name: routerpve-svc
      middlewares:
        - name: EXAMPLE
          namespace: EXAMPLE
  tls:
    secretName: wildcard-timo-be-production-tls
---
apiVersion: v1
kind: Service
metadata:
  name: routerpve-svc
  namespace: traefik
spec:
  externalName: routerpve.timo.local # Can also be an IP address
  type: ExternalName
  ports:
    - port: 8006
