kubernetes/utilities.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: utilities
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stirling-pdf
  namespace: utilities
  annotations:
    keel.sh/policy: all
    keel.sh/trigger: poll            
    keel.sh/pollSchedule: "@every 24h"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stirling-pdf
  template:
    metadata:
      labels:
        app: stirling-pdf
    spec:
      containers:
      - name: stirling-pdf
        image: frooodle/s-pdf:latest
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
        # Cannot add this securityContext because stirling-pdf needs additional permissions for chowning files
        # securityContext:
        #   allowPrivilegeEscalation: false
        #   capabilities:
        #     drop:
        #       - "ALL"
        #   seccompProfile:
        #     type: RuntimeDefault
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: stirling-pdf
  namespace: utilities
spec:
  selector:
    app: stirling-pdf
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: stirling-pdf-traefik
  namespace: utilities
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`stirlingpdf.kubernetes.timo.be`)
      kind: Rule
      services:
        - name: stirling-pdf
          port: 8080
      middlewares:
        - name: auth
          namespace: traefik
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stirling-pdf-tailscale
  namespace: utilities
spec:
  defaultBackend:
    service:
      name: stirling-pdf
      port:
        number: 8080
  ingressClassName: tailscale
  tls:
    - hosts:
        - stirlingpdf
